@@ -249,4 +249,7 @@
   <data name="UnableToConnectToHost" xml:space="preserve">
     <value>Unable to connect to any of the specified MySQL hosts.</value>
   </data>
+  <data name="UnableToRetrieveSProcData" xml:space="preserve">
+    <value>Unable to retrieve stored procedure metadata.  Either grant SELECTprivilege to mysql.proc for this user or use "noAccessToProcedureBody=true" with  your connection string.</value>
+  </data>
 </root>
